<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>{orgId}</groupId>
	<artifactId>mule-hashicorp-vault</artifactId>
	<version>1.0.1</version>
	<packaging>mule-extension</packaging>
	<name>mule-hashicorp-vault</name>

	<parent>
		<groupId>org.mule.extensions</groupId>
		<artifactId>mule-modules-parent</artifactId>
		<version>1.9.2</version>
	</parent>
	<properties>
		<mule.runtime.version>4.9.0</mule.runtime.version>
		<mule.maven.plugin.version>4.2.0</mule.maven.plugin.version>
		<munit.input.directory>src/test/munit</munit.input.directory>
        <munit.output.directory>${basedir}/target/test-mule/munit</munit.output.directory>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<release>17</release>
				</configuration>
			</plugin>

           <plugin>
                <groupId>org.mule.tools.maven</groupId>
                <artifactId>exchange-mule-maven-plugin</artifactId>
                <version>0.0.13</version>

                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>exchange-pre-deploy</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>deploy</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>exchange-deploy</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
			<plugin>
                <groupId>org.mule.tools.maven</groupId>
        
                <artifactId>mule-maven-plugin</artifactId>
                <version>${mule.maven.plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <javaVersion>17</javaVersion>
                </configuration>
            </plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
				    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.xml/javax.xml.namespace=ALL-UNNAMED
				    </argLine>
					<systemPropertyVariables>
						<log4j.configuration>file:${basedir}/log4j2-test.xml</log4j.configuration>
					</systemPropertyVariables>
					<dependenciesToScan>
                        <dependency>org.mule.sdk:mule-sdk-api</dependency>
                        <dependency>org.mule.runtime:mule-api</dependency>
                    </dependenciesToScan>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.mule.sdk</groupId>
						<artifactId>mule-sdk-api</artifactId>
						<version>0.11.1</version>
					</dependency>
					<dependency>
                        <groupId>org.mule.runtime</groupId>
                        <artifactId>mule-api</artifactId>
                        <version>1.9.2</version>
                    </dependency>
				</dependencies>
			</plugin>
			<plugin>
			  <groupId>org.mule.runtime.plugins</groupId>
			  <artifactId>mule-extensions-maven-plugin</artifactId>
			  <version>1.9.2</version>
			  <extensions>true</extensions>
			</plugin>

		
		</plugins>
	</build>

	<dependencies>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.9</version>
		</dependency>
		<!-- Vault Java Driver -->
		<dependency>
			<groupId>org.mule.sdk</groupId>
			<artifactId>mule-sdk-api</artifactId>
			<version>0.11.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
		  <groupId>org.mule.runtime</groupId>
		  <artifactId>mule-api</artifactId>
		  <version>1.9.2</version>
		  <scope>provided</scope>
		  <optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.mule.runtime</groupId>
			<artifactId>mule-module-artifact</artifactId>
			<version>4.9.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mule.runtime</groupId>
			<artifactId>api-annotations</artifactId>
			<version>1.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.vault</groupId>
			<artifactId>spring-vault-core</artifactId>
			<version>3.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
			<version>5.3.1</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-web</artifactId>
		    <version>6.1.5</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>vault</artifactId>
			<version>1.20.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>5.5.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mule.tests</groupId>
			<artifactId>mule-tests-unit</artifactId>
			<version>4.9.0</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-slf4j-impl</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.mule.runtime</groupId>
					<artifactId>mule-module-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.5.8</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy</artifactId>
			<version>1.15.5</version>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>CH-Exchange</id>
			<name>Mule Repo</name>
			<url>https://maven.anypoint.mulesoft.com/api/v3/organizations/{orgId}/maven</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>CIP-Exchange</id>
			<name>Mule Repo</name>
			<url>https://maven.anypoint.mulesoft.com/api/v3/organizations/{orgId}/maven</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>MuleRepository</id>
			<name>Mule Release Repository</name>
			<url>https://repository.mulesoft.org/nexus/content/repositories/releases-ee/</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>anypoint-exchange-v3</id>
			<name>Anypoint Exchange</name>
			<url>https://maven.anypoint.mulesoft.com/api/v3/maven</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>mulesoft-releases</id>
			<name>MuleSoft Releases Repository</name>
			<url>https://repository.mulesoft.org/releases/</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>maven-central</id>
			<name>Maven Central Repository</name>
			<url>https://repo1.maven.org/maven2/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>mulesoft-releases-ee</id>
			<name>MuleSoft EE Releases Repository</name>
			<url>https://repository.mulesoft.org/nexus/content/repositories/releases-ee/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>mulesoft-releases</id>
			<name>MuleSoft Releases Repository</name>
			<layout>default</layout>
			<url>https://repository.mulesoft.org/releases/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>mulesoft-releases-ee</id>
			<name>MuleSoft EE Releases Repository</name>
			<url>https://repository.mulesoft.org/nexus/content/repositories/releases-ee/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<distributionManagement>
		<repository>
			<id>anypoint-exchange-v3</id>
			<name>Exchange Private Repository</name>
			<url>https://maven.anypoint.mulesoft.com/api/v3/organizations/{orgId}/maven</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
	</distributionManagement>

</project>